# axum-web

./: .env  Cargo.toml
docker/: docker-compose.yaml
migrations/: 20241022134719_create_tickets_table.down.sql  20241022134719_create_tickets_table.up.sql
src/: main.rs  pool.rs
src/handler/: tickets.rs
src/utils/: pagination.rs
